[package]
name = "aery"
version = "0.9.0"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/aery"
description = "Non-fragmenting ZST relations for Bevy."
keywords = ["bevy", "relations", "game", "ecs"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.16"
bevy_derive = "0.16"
bevy_ecs = "0.16"
bevy_reflect = "0.16"
bevy_log = "0.16"
bevy_utils = "0.16"
smallvec = "1.11.0"
variadics_please = "1"
aery_macros = { path = "macros", version = "0.3.0-dev" }
aquamarine = "0.6"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "smallvec/serde", "bevy_ecs/serialize"]

[dev-dependencies]
bevy = "0.16"
